# litex_model

./: .gitignore  .mv  README.md  a.py  hardware_config.yaml  out.py  run.sh  tools.py  train.py
dataset/: a.py  converted_output.json  dataset_test_100.json  test_10.json  test_litex.json  test_modified.json
evaluation_logs_retry/: retry_results_20251204_150342.json
pylitex/: LICENSE  README.md  pyproject.toml
pylitex/pylitex/: __init__.py  base_info.py  repl_interactor.py  run_local.py  run_online.py
results/: README.md
results/runs/Dec01_22-42-37_autodl-container-c2d74383d9-de4ac0a7/: events.out.tfevents.1764600457.autodl-container-c2d74383d9-de4ac0a7.2122.0
results/runs/Nov28_12-35-17_autodl-container-c2d74383d9-de4ac0a7/: events.out.tfevents.1764304821.autodl-container-c2d74383d9-de4ac0a7.22001.0
results/runs/Nov28_12-53-18_autodl-container-c2d74383d9-de4ac0a7/: events.out.tfevents.1764305906.autodl-container-c2d74383d9-de4ac0a7.118930.0
results/runs/Nov30_17-49-02_autodl-container-c2d74383d9-de4ac0a7/: events.out.tfevents.1764496447.autodl-container-c2d74383d9-de4ac0a7.7112.0
results/runs/Nov30_17-57-46_autodl-container-c2d74383d9-de4ac0a7/: events.out.tfevents.1764496970.autodl-container-c2d74383d9-de4ac0a7.19771.0
results/runs/Nov30_18-09-27_autodl-container-c2d74383d9-de4ac0a7/: events.out.tfevents.1764497670.autodl-container-c2d74383d9-de4ac0a7.36341.0
results/runs/Nov30_18-15-47_autodl-container-c2d74383d9-de4ac0a7/: events.out.tfevents.1764498047.autodl-container-c2d74383d9-de4ac0a7.45387.0
(+3 files in other folders)
